test/ova: updated boolean

--- a/js/template/test/OvaParasite.html
+++ b/js/template/test/OvaParasite.html
@@ -1,53 +1,55 @@
 <div class="view-test-ova">
     
-    <div class="yui3-g-r page-section">
-        <!-- tests -->
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
+    <div class="test-section">
+        <div class="yui3-g-r page-section">
+            <!-- tests -->
+            <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                <div class="yui3-g">
+                    <div class="yui3-u-1-2">
+                        <div class="yui3-u-c">
+                            <div class="boolean-container"></div>
+                        </div>
+                    </div>
+
+                    <div class="yui3-u-1-2">
+                        <div class="yui3-u-c">
+                            <div class="boolean-container"></div>
+                        </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
+            <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                <div class="yui3-g">
+                    <div class="yui3-u-1-2">
+                        <div class="yui3-u-c">
+                            <div class="boolean-container"></div>
+                        </div>
+                    </div>
+
+                    <div class="yui3-u-1-2">
+                        <div class="yui3-u-c">
+                            <div class="boolean-container"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
+        <div class="yui3-g-r page-section">
+            <!-- tests -->
+            <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                <div class="yui3-g">
+                    <div class="yui3-u-1-2">
+                        <div class="yui3-u-c">
+                            <div class="boolean-container"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="yui3-g-r page-section">
-        <!-- tests -->
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
+                    <div class="yui3-u-1-2">
+                        <div class="yui3-u-c">
+                            <div class="boolean-container"></div>
+                        </div>
                     </div>
                 </div>
             </div>
