cbc - rbc - added initial pie chart code

--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -2,10 +2,10 @@
 <div class="view-test-cbc">
 
 	<!-- RBC -->
-	<div class="page-section subsection subsection-rbc">
+	<div class="page-section subsection subsection-rbc test-section">
 		<div class="yui3-g-r">
 			<!-- description -->
-			<div class="yui3-u-1-2">
+			<div class="yui3-u-2-3">
 				<div class="yui3-u-c">
 					<div class="subsection-description">
 
@@ -14,11 +14,16 @@
 					</div>
 				</div>
 			</div>
+		</div>
 
-			<div class="yui3-u-1-12"></div>
+		<div class="yui3-g-r">
+			<div class="yui3-u-1-2">
+				<div class="yui3-u-c">
+					<div class="chart"></div>
+				</div>
+			</div>
 
-			<!-- result diagram -->
-			<div class="yui3-u-5-12">
+			<div class="yui3-u-1-2">
 				<div class="yui3-u-c">
 					<div class="diagram-rbc-result"></div>
 				</div>
