cbc: added other charts

--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -25,7 +25,7 @@
 
 			<div class="yui3-u-1-2">
 				<div class="yui3-u-c">
-					<div class="diagram-rbc-result"></div>
+					<div class="range"></div>
 				</div>
 			</div>
 		</div>
@@ -95,10 +95,10 @@
 	</div>
 
 	<!-- WBC -->
-	<div class="page-section subsection subsection-wbc">
+	<div class="page-section subsection subsection-wbc test-section">
 		<div class="yui3-g-r">
 			<!-- description -->
-			<div class="yui3-u-1-2">
+			<div class="yui3-u-2-3">
 				<div class="yui3-u-c">
 					<div class="subsection-description">
 						<h1><span>White Blood Cells (WBC)</span></h1>
@@ -106,13 +106,18 @@
 					</div>
 				</div>
 			</div>
+		</div>
 
-			<div class="yui3-u-1-12"></div>
-
-			<!-- result diagram -->
-			<div class="yui3-u-5-12">
+		<div class="yui3-g-r">
+			<div class="yui3-u-1-2">
 				<div class="yui3-u-c">
-					<div class="diagram-wbc-result"></div>
+					<div class="chart"></div>
+				</div>
+			</div>
+
+			<div class="yui3-u-1-2">
+				<div class="yui3-u-c">
+					<div class="range"></div>
 				</div>
 			</div>
 		</div>
@@ -126,10 +131,10 @@
 	</div>
 	
 	<!-- Platelets -->
-	<div class="page-section subsection subsection-platelet">
+	<div class="page-section subsection subsection-platelet test-section">
 		<div class="yui3-g-r">
 			<!-- description -->
-			<div class="yui3-u-1-2">
+			<div class="yui3-u-2-3">
 				<div class="yui3-u-c">
 					<div class="subsection-description">
 						<h1><span>Platelets</span></h1>
@@ -137,52 +142,18 @@
 					</div>
 				</div>
 			</div>
-
-			<div class="yui3-u-1-12"></div>
-
-			<!-- result diagram -->
-			<div class="yui3-u-5-12">
-				<div class="yui3-u-c">
-					<div class="diagram-platelet-result"></div>
-				</div>
-			</div>
 		</div>
 
-		<div class="yui3-g-r clumping">
-			<div class="yui3-u-1 yui3-visible-phone">
+		<div class="yui3-g-r">
+			<div class="yui3-u-1-2">
 				<div class="yui3-u-c">
-					<h2>Clumping</h2>
+					<div class="chart"></div>
 				</div>
 			</div>
 
-			<!-- clumping diagrams -->
-			<div class="yui3-u-7-12 column">
-				<div class="yui3-g">
-					<!-- no clumping -->
-					<div class="yui3-u-1-2 diagram clumping-no">
-						<div class="yui3-u-c">
-							<img src="images/test/cbc/clumping-no.png" alt="No Clumping" />
-							<p class="caption">No Clumping</p>
-						</div>
-					</div>
-
-					<!-- clumping -->
-					<div class="yui3-u-1-2 diagram clumping-yes">
-						<div class="yui3-u-c">
-							<img src="images/test/cbc/clumping-yes.png" alt="Clumping" />
-							<p class="caption">Clumping</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- clumping description -->
-			<div class="yui3-u-5-12 column">
-				<div class="yui3-u-c clumping-description">
-					<div class="inner">
-						<h2 class="yui3-hidden-phone">Clumping</h2>
-						<p>A low platelet count doesn’t always mean low platelets. In order to do their job – stop bleeding – platelets stick together and create a clump. Sometimes when drawing blood, platelets clump together, resulting in a false low count.</p>
-					</div>
+			<div class="yui3-u-1-2">
+				<div class="yui3-u-c">
+					<div class="range"></div>
 				</div>
 			</div>
 		</div>
