cbc - created rough types of cell subsection (replacing the old one).

--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -65,6 +65,7 @@ $max-page-width: 1000px;
 //@import "view/subtest/cbc-summary";
 @import "view/subtest/select";
 @import "view/subtest/types-of-cell";
+@import "view/subtest/types-of-cell2";
 @import "view/subtest/pod/base";
 @import "view/subtest/pod/color";
 @import "view/subtest/pod/select";
