--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -61,12 +61,7 @@
 			</div>
 		</div>
 
-		<div class="yui3-g-r">
-			<!-- cell types -->
-			<div class="yui3-u-1">
-				<div class="diagram-wbc-breakdown"></div>
-			</div>
-		</div>
+		<div class="test-subsection types-of-cell"></div>
 	</div>
 	
 	<!-- Platelets -->
