--- a/css-sass/view/_navigation.scss
+++ b/css-sass/view/_navigation.scss
@@ -3,7 +3,7 @@
     $navigation-2x-sprite: sprite-map("navigation/icons-2x/*.png");
 
     position: fixed;
-    top: 0;
+    top:47px;
     right: 0;
     z-index: 2;
 
