--- a/css-sass/screen.scss
+++ b/css-sass/screen.scss
@@ -64,7 +64,7 @@ $max-page-width: 1000px;
 @import "view/subtest/range-group";
 //@import "view/subtest/cbc-summary";
 @import "view/subtest/select";
-@import "view/subtest/types-of-cell";
+//@import "view/subtest/types-of-cell";
 @import "view/subtest/types-of-cell2";
 @import "view/subtest/pod/base";
 @import "view/subtest/pod/color";
