--- a/css-sass/view/widget/_busy.scss
+++ b/css-sass/view/widget/_busy.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background:rgba(255,255,255,.9);
-    z-index: 9999999999;
+    z-index: 100000;
     display: none; /* hidden by default */
 	opacity:1 !important;
 
