--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -1,188 +1,84 @@
 <div class="view-test-urine-analysis">
 
-    <!-- summary -->
-    <div class="yui3-g-r page-section">
-        <!-- diagram -->
-        <div class="yui3-u-3-4">
-            <div class="yui3-u-c test-description">
-                <h1>Analyzing {{patient.name}}’s urine gives us an excellent snapshot of how the body's organs and systems are functioning.</h1>
-                <p>Urine is waste that’s produced from {{patient.name}}’s blood after it has passed through these systems. We can spot changes in {{patient.name}} earlier here than we can in other tests.</p>
-            </div>
-        </div>
-    </div>
 
-    <!-- kidneys and bladder -->
-    <div class="yui3-g-r page-section">
-        <!-- description -->
-        <div class="yui3-u-7-12 kidney-bladder">
-            <!-- kidneys -->
-            <div class="yui3-g-r kidney">
-                <div class="yui3-u-1-4 yui3-u-1-small-tablet">
-                    <div class="yui3-u-c">
-                        <img class="diagram" src="images/test/urine/kidneys.png" />
-                    </div>
-                </div>
+    <!-- Visual Analysis -->
+    <div class="test-section visual">
+        <div class="yui3-g-r">
+            <!-- description -->
+            <div class="yui3-u-2-3">
+                <div class="yui3-u-c">
+                    <div class="test-section-description">
 
-                <div class="yui3-u-3-4">
-                    <div class="yui3-u-c">
-                        <h2>Kidneys</h2>
-                        <h1>The Master Filter System</h1>
-                        <p>{{patient.name}}’s organs and cells produce waste, which is dumped into the blood. The kidneys filter the blood, returning clean blood to the body and flushing the waste into the bladder.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- bladder -->
-            <div class="yui3-g-r bladder">
-                <div class="yui3-u-1-4 yui3-u-1-small-tablet">
-                    <div class="yui3-u-c">
-                        <img class="diagram" src="images/test/urine/bladder.png" />
-                    </div>
-                </div>
-
-                <div class="yui3-u-3-4">
-                    <div class="yui3-u-c">
-                        <h2>Bladder</h2>
-                        <h1>The Holding Tank</h1>
-                        <p>The bladder is a holding tank where the body stores its waste, which is then expelled as urine.</p>
+                        <h1><span>Visual Analysis</span></h1>
+                        <p>We look at the appearance of {{patient.name}}’s urine, as well as investigating.Many factors can affect the color of urine, from medication to diet. Urine is a clear fluid. It can appear cloudy if it contains unexpected cells or crystals.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- bracket -->
-        <div class="yui3-u-1-12">
-            <div class="yui3-u-c bracket">
-                <img class="yui3-hidden-phone vertical" src="images/test/urine/bracket-vertical.png" />
-                <img class="yui3-visible-phone horizontal" src="images/test/urine/bracket-horizontal.png" />
-            </div>
-        </div>
+        <div class="yui3-g-r">
+            <div class="yui3-u-1-2">
+                <div class="yui3-u-c property color">
+                    <h2>Color</h2>
 
-        <!-- results -->
-        <div class="yui3-u-1-3">
-            <div class="yui3-u-c visual-analysis">
-                <h1>Visual Analysis of {{patient.name}}’s Urine</h1>
+                    <div class="palette {{color.type}}"></div>
 
-                <div class="section first">
-                    <h4 class="title">Color</h4>
-                    <div>
-                        <span class="color {{color.type}}">&nbsp;</span>
-                        <span class="caption">{{color.label}}</span>
-                    </div>
+                    {{color.label}}
                     <p>Many factors can affect the color of urine, from medication to diet.</p>
                 </div>
+            </div>
 
-                <div class="section">
-                    <h4 class="title">Appearance</h4>
-                    <div>
-                        <span class="appearance {{appearance.type}}">&nbsp;</span>
-                        <span class="caption">{{appearance.label}}</span>
-                    </div>
+            <div class="yui3-u-1-2">
+                <div class="yui3-u-c property">
+                    <h2>Appearance</h2>
+
+                    {{appearance.label}}
+
+                    <div class="range"></div>
+                    {{appearance.type}}
                     <p>Urine is a clear fluid. It can appear cloudy if it contains unexpected cells or crystals.</p>
                 </div>
-
-                <div class="section">
-                    <h4 class="title">Microscopic Components Detected</h4>
-    				
-                    <p>The following components were found in {{patient.name}}’s urine:</p>
-
-                    {{#if microscopicComponents}}
-                        <ul class="components">
-                             {{#each microscopicComponents}}
-                             <li class="component" title="{{description}}">
-                                <span class="caption">{{label}}</span>
-                            </li>
-                            {{/each}}
-                        </ul>
-                    {{else}}
-                        <div>
-                            <span class="appearance none">&nbsp;</span>
-                            <span class="caption">None Found</span>
-                        </div>
-                    {{/if}}
-                </div>
             </div>
         </div>
+
+        <div class="test-subsection particle"></div>
     </div>
 
-    <!-- metabolic components -->
-    <div class="yui3-g-r page-section metabolic-components">
-        <!-- title -->
-        <div class="yui3-u-1">
-            <div class="yui3-u-c">
-                <h1>Chemical Analysis of {{patient.name}}’s Urine</h1>
-            </div>
-        </div>
-        
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="glucose"></div>
-                    </div>
-                </div>
 
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="protein"></div>
+    <!-- Chemical Analysis -->
+    <div class="test-section visual">
+        <div class="yui3-g-r">
+            <!-- description -->
+            <div class="yui3-u-2-3">
+                <div class="yui3-u-c">
+                    <div class="test-section-description">
+
+                        <h1><span>Chemical Analysis</span></h1>
+                        <p>By analyzing the chemistry of {{patient.name}}’s urine, we are able to understand organ function more clearly and detect any potential issues much sooner.</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="ketones"></div>
-                    </div>
-                </div>
+        <div class="yui3-g-r">
+            <div class="yui3-u-1-2">
+                <div class="yui3-u-c property">
+                    <h2>Concentration</h2>
 
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="bilirubin"></div>
-                    </div>
+                    <div class="select"></div>
+                </div>
+            </div>
+
+            <div class="yui3-u-1-2">
+                <div class="yui3-u-c property">
+                    <h2>pH Levels</h2>
+
+                    <p>Blood should always be at a specific pH level, which is neutral. The kidneys are responsible for maintaining {{patient.name}}’s pH level.</p>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- chemical analysis -->
-    <div class="yui3-g-r page-section subsection-chemical-analysis">
-
-        <!-- concentration -->
-        <div class="yui3-u-1-2">
-            <div class="yui3-u-c column concentration attribute-list-container">
-                <h4 class="title">Concentration</h4>
-
-                <div class="attribute-list">
-                    <ul class="options">
-                        {{#each concentrations}}
-                            <li class="{{#if isSelected}}selected{{/if}}">{{label}}</li>
-                        {{/each}}
-                    </ul>
-                </div>
-
-                <p>This level reflects the water balance in {{patient.name}}’s body, which should be concentrated. If {{patient.name}} drinks too much water, the kidneys will dump it, resulting in diluted urine.</p>
-            </div>
-        </div>
-
-        <!-- ph -->
-        <div class="yui3-u-1-2">
-            <div class="yui3-u-c column ph attribute-list-container">
-                <h4 class="title"><span class="small">p</span>H</h4>
-
-                <div class="attribute-list">
-                    <ul class="options">
-                        {{#each phs}}
-                            <li class="{{#if isSelected}}selected{{/if}}">{{label}}</li>
-                        {{/each}}
-                    </ul>
-                </div>
-
-                <p>Blood should always be at a specific pH level, which is neutral. The kidneys are responsible for maintaining {{patient.name}}’s pH level.</p>
-            </div>
-        </div>
+        <div class="test-subsection component"></div>
     </div>
 
 </div>
