--- a/css-sass/_common.scss
+++ b/css-sass/_common.scss
@@ -1,11 +1,15 @@
-$pageSectionPaddingRight: 10px;
-$pageSectionPaddingLeft: 10px;
+$pageSectionPaddingRight: 30px;
+$pageSectionPaddingLeft: 15px;
 
 .page-section {
-    max-width: $max-page-width;
-    margin: 0 auto;
     padding: 0 $pageSectionPaddingRight 0 $pageSectionPaddingLeft;
 
+    /* Tablet */
+    @media (min-width:($mq-phone + 1px)) and (max-width:($mq-tablet - 1px)) {
+        padding: 0 40px;
+    }
+
+    /* Phone */
     @media (max-width:($mq-phone)) {
         padding: 0;
     }
