--- a/css-sass/view/_mainmenu.scss
+++ b/css-sass/view/_mainmenu.scss
@@ -1,9 +1,11 @@
-.view-mainmenu {	
+.view-mainmenu {
+	.page-section {
+		background-color: #0099be;
+	}
 }
 
 .mainNav {
 	height:105px;
-	background:#0099be;
 }
 
 .mainMenu {
@@ -247,8 +249,6 @@
 		font-weight:400;
 		a {
 			color:#fff;
-			text-decoration:none;
-			border-bottom:1px solid #fff;
 			&:visited {
 				color:#fff;
 			}
