--- a/css/screen.css
+++ b/css/screen.css
@@ -1510,7 +1510,7 @@ h4 .small {
 }
 /* content wrapper inside a grid unit */
 .yui3-u-c {
-  margin: 0.67em;
+  margin: 10px;
 }
 
 /* Tablet */
@@ -1755,9 +1755,14 @@ h4 .small {
 }
 
 .page-section {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 0 10px 0 10px;
+  padding: 0 30px 0 15px;
+  /* Tablet */
+  /* Phone */
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .page-section {
+    padding: 0 40px;
+  }
 }
 @media (max-width: 480px) {
   .page-section {
@@ -1951,7 +1956,7 @@ span.placeholder {
 }
 @media (min-width: 481px) {
   .page-section-top {
-    padding-top: 24px;
+    padding-top: 15px;
   }
 }
 .page-section-top .links {
@@ -2085,9 +2090,12 @@ span.placeholder {
   overflow: hidden;
 }
 
+.view-mainmenu .page-section {
+  background-color: #0099be;
+}
+
 .mainNav {
   height: 105px;
-  background: #0099be;
 }
 
 .mainMenu {
@@ -2322,8 +2330,6 @@ span.placeholder {
 }
 .secondaryMenu li a {
   color: #fff;
-  text-decoration: none;
-  border-bottom: 1px solid #fff;
 }
 .secondaryMenu li a:visited {
   color: #fff;
@@ -2674,13 +2680,13 @@ span.placeholder {
     margin-top: 0;
     background-color: white;
     height: 80px;
-    background-position: 20px center;
-    margin-left: -20px;
-    padding-left: 20px;
+    background-position: 65px center;
+    margin-left: -65px;
+    padding-left: 65px;
     width: 100%;
   }
   .view-overview .avatar-flag .content .text-container .icon {
-    left: 20px;
+    left: 65px;
   }
 }
 @media (max-width: 480px) {
