widget/TestOverview: updated padding and diagram sizing

--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -149,6 +149,10 @@
         >.body {
             >.overview {
                 background-color: $overviewBgColor;
+
+                .diagram-container >.inner {
+                    max-width: image-width("../images/test/#{$type}/diagram-2x.png") / 2;
+                }
             }
         }
     }
