--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -1,20 +1,22 @@
 <div class="view-widget-test-overview">
 
-    <div class="yui3-g-r section-heading">
-        <!-- description -->
-        <div class="yui3-u-1-2">
-            <div class="yui3-u-c column">
-                <div class="inner">
-                    <div class="description">{{description}}</div>
+    <div class="inner">
+        <div class="yui3-g-r">
+            <!-- description -->
+            <div class="yui3-u-1-2 section">
+                <div class="yui3-u-c column">
+                    <div class="inner">
+                        <div class="description">{{description}}</div>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- diagram -->
-        <div class="yui3-u-1-2">
-            <div class="yui3-u-c diagram-container">
-                <div class="inner">
-                    <img class="diagram" src="images/test/{{type}}/diagram.png" />
+            <!-- diagram -->
+            <div class="yui3-u-1-2 section">
+                <div class="yui3-u-c diagram-container">
+                    <div class="inner">
+                        <img class="diagram" src="images/test/{{type}}/diagram-2x.png" />
+                    </div>
                 </div>
             </div>
         </div>
