--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -13,7 +13,7 @@
 
             <!-- diagram -->
             <div class="yui3-u-1-2 section">
-                <div class="yui3-u-c diagram-container">
+                <div class="yui3-u-c column diagram-container">
                     <div class="inner">
                         <img class="diagram" src="images/test/{{type}}/diagram-2x.png" />
                     </div>
