--- a/css-sass/_common.scss
+++ b/css-sass/_common.scss
@@ -28,6 +28,30 @@ $pageSectionPaddingLeft: 15px;
     color: #444;
 }
 
+.widget-arrow {
+    $width: 22px;
+    $height: 22px;
+
+    width: $width;
+    height: $height;
+
+    display: inline-block;
+    vertical-align: middle;
+
+    background-image: url("../images/common/arrow.png");
+
+    @media 
+    only screen and (-webkit-min-device-pixel-ratio: 2), 
+    only screen and (min-resolution: 192dpi) {
+        background-image: url("../images/common/arrow-2x.png");
+        background-size: 100%;
+    }
+
+    &.down {
+        background-position: $width 0;
+    }
+}
+
 input {
     @include secondaryFont;
     @include mediumFontSize;
