--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -6,7 +6,7 @@
             <div class="yui3-u-1-2 section">
                 <div class="yui3-u-c column">
                     <div class="inner">
-                        <div class="description">{{description}}</div>
+                        <div class="description">{{description}}&nbsp;<span class="widget-arrow"></span></div>
                     </div>
                 </div>
             </div>
