--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -2,30 +2,32 @@
 <div class="view-test-cbc">
 
 	<!-- RBC -->
-	<div class="page-section subsection subsection-rbc test-section">
-		<div class="yui3-g-r">
-			<!-- description -->
-			<div class="yui3-u-2-3">
-				<div class="yui3-u-c">
-					<div class="subsection-description">
+	<div class="subsection subsection-rbc test-section">
+		<div class="page-section">
+			<div class="yui3-g-r">
+				<!-- description -->
+				<div class="yui3-u-2-3">
+					<div class="yui3-u-c">
+						<div class="subsection-description">
 
-						<h1><span>Red Blood Cells (RBC)</span></h1>
-						<p>Red blood cells make up the majority of {{patient.name}}’s blood count. They power {{patient.name}}’s body, carrying oxygen from the lungs to all the other cells and tissues, where it’s then turned into energy.</p>
+							<h1><span>Red Blood Cells (RBC)</span></h1>
+							<p>Red blood cells make up the majority of {{patient.name}}’s blood count. They power {{patient.name}}’s body, carrying oxygen from the lungs to all the other cells and tissues, where it’s then turned into energy.</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="yui3-g-r">
-			<div class="yui3-u-1-2">
-				<div class="yui3-u-c">
-					<div class="chart"></div>
+			<div class="yui3-g-r">
+				<div class="yui3-u-1-2">
+					<div class="yui3-u-c">
+						<div class="chart"></div>
+					</div>
 				</div>
-			</div>
 
-			<div class="yui3-u-1-2">
-				<div class="yui3-u-c">
-					<div class="range"></div>
+				<div class="yui3-u-1-2">
+					<div class="yui3-u-c">
+						<div class="range"></div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -34,29 +36,31 @@
 	</div>
 
 	<!-- WBC -->
-	<div class="page-section subsection subsection-wbc test-section">
-		<div class="yui3-g-r">
-			<!-- description -->
-			<div class="yui3-u-2-3">
-				<div class="yui3-u-c">
-					<div class="subsection-description">
-						<h1><span>White Blood Cells (WBC)</span></h1>
-						<p>White blood cells protect and defend {{patient.name}}’s body against "invaders" like viruses, bacteria and parasites. There are different kinds of white blood cells that specialize in fighting different kinds of invaders.</p>
+	<div class="subsection subsection-wbc test-section">
+		<div class="page-section">
+			<div class="yui3-g-r">
+				<!-- description -->
+				<div class="yui3-u-2-3">
+					<div class="yui3-u-c">
+						<div class="subsection-description">
+							<h1><span>White Blood Cells (WBC)</span></h1>
+							<p>White blood cells protect and defend {{patient.name}}’s body against "invaders" like viruses, bacteria and parasites. There are different kinds of white blood cells that specialize in fighting different kinds of invaders.</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="yui3-g-r">
-			<div class="yui3-u-1-2">
-				<div class="yui3-u-c">
-					<div class="chart"></div>
+			<div class="yui3-g-r">
+				<div class="yui3-u-1-2">
+					<div class="yui3-u-c">
+						<div class="chart"></div>
+					</div>
 				</div>
-			</div>
 
-			<div class="yui3-u-1-2">
-				<div class="yui3-u-c">
-					<div class="range"></div>
+				<div class="yui3-u-1-2">
+					<div class="yui3-u-c">
+						<div class="range"></div>
+					</div>
 				</div>
 			</div>
 		</div>
