--- a/js/template/widget/TestSubsection.html
+++ b/js/template/widget/TestSubsection.html
@@ -1,7 +1,7 @@
-<div class="view-widget-test-subsection">
+<div class="view-widget-test-subsection page-section">
 
     <div class="header">
-        <div class="title">{{title}}</div>
+        <span class="title"><span class="widget-arrow"></span> {{title}}</span>
     </div>
 
     <div class="body">
