jquery-equal-heights: fixed bug - options object now available when refresh called test-overview: added phone styles

--- a/css-sass/view/widget/_test-overview.scss
+++ b/css-sass/view/widget/_test-overview.scss
@@ -25,4 +25,15 @@
         font-size: 197%;
         font-weight: bold;
     }
+
+    /* phone */
+    @media (max-width:$mq-phone) {
+        >.inner {
+            padding: 10px 0 25px 0;
+        }
+
+        .diagram-container {
+            padding-top: 20px;
+        }
+    }
 }
